# Al-artworks

./: .env.txt  Al-artworks_AI_Suite.spec  Al-artworks_Complete_Installer.bat  Al-artworks_Simple_App.py  Al-artworks_Standalone_App.py  BUILD_SUMMARY.md  CMakeLists.txt  DEPLOYMENT_PACKAGE.md  FIXED_INSTALLER_TROUBLESHOOTING.md  GODMODE_ACHIEVEMENT_SUMMARY.md  IMPLEMENTATION_STATUS_REPORT.md  INSTALLATION_CHECKLIST.md  INSTALLER_README.md  InstallationLog.txt  MANUAL_INSTALL_GUIDE.md  README.md  README_AUTOMATION.md  README_GODMODE.md  README_ULTIMATE.md  Run_Al_Artworks.bat  Run_Simple_App.bat  STANDALONE_INSTALLER_README.md  WINDOWS_CLANG_BUILD_GUIDE.md  ai_agent.py  ai_agent_orchestrator.py  ai_agent_plugin_sample.py  ai_agent_with_orchestration.py  auto_install.bat  auto_launcher.ps1  build.py  build_godmode.sh  build_linux.sh  build_optimized_exe.bat  build_standalone_exe.bat  build_windows.bat  build_windows_clang.bat  build_windows_clang.ps1  connect_context7.py  continuous_voice.py  demo.py  (+35 more)
AI-ARTWORKS/: .gitignore  CMakeLists.txt  COMPREHENSIVE_RESTORATION_PIPELINE.md  COSMIC_SUMMARY.md  COSMIC_VISION.md  README.md  SYSTEM_STATUS.md  cosmic_demo.py  launch_cosmic.py  quick_start.sh  requirements_enhanced.txt  system_validation.py
AI-ARTWORKS/features/: cross_app_automation.py
AI-ARTWORKS/include/ai/: AIProcessor.h
AI-ARTWORKS/include/audio/: AudioProcessor.h
AI-ARTWORKS/include/core/: Application.h
AI-ARTWORKS/include/graphics/: GraphicsEngine.h
AI-ARTWORKS/include/utils/: AssetManager.h
AI-ARTWORKS/scripts/: build_simple.bat  run_installation_test.bat  run_installation_test.sh  setup_ollama_agents.ps1
AI-ARTWORKS/src/: __init__.py  main.cpp
AI-ARTWORKS/src/agents/: athena_core.py  bark_voice_agent.py  orchestrator.py  predictive_intent_agent.py  vector_conversion_agent.py  whisper_voice_agent.py  workflow_builder.py
AI-ARTWORKS/src/ai/: AIProcessor.cpp
AI-ARTWORKS/src/audio/: AudioProcessor.cpp
AI-ARTWORKS/src/core/: Application.cpp  gpu_utils.py
AI-ARTWORKS/src/graphics/: GraphicsEngine.cpp
AI-ARTWORKS/src/ui/: athena_intro_dialog.py  chat_panel.py  collab_client.py  context_panel.py  main_window.py  modern_interface.py  security_dialog.py
AI-ARTWORKS/src/utils/: AssetManager.cpp
AI-ARTWORKS/tests/: test_agents.py  test_core.py  test_integration.py
advanced_rag_system/: __init__.py
advanced_rag_system/core/: rag_engine.py
advanced_rag_system/utils/: config.py
al-artworks/: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
al-artworks/assets/: README.md
al-artworks/data/: README.md
al-artworks/docs/: README.md
al-artworks/src/: README.md  __init__.py
al-artworks/src/agents/: README.md
al-artworks/src/ui/: README.md  __init__.py  ar_preview.py  canvas.py  eve_avatar.py  main_window.py  themes.py  toolbar.py
al-artworks/src/utils/: __init__.py  config.py  logger.py
al-artworks/tests/: README.md
athena_avatar/: LICENSE  README.md  __init__.py  athena_config.yaml  build.py  install.py  main.py  requirements.txt  run.py
athena_avatar/avatar/: __init__.py  animation_controller.py  athena_model.py  emotion_engine.py  gesture_system.py  voice_agent.py
athena_avatar/core/: __init__.py  memory_manager.py  model_optimizer.py  performance_monitor.py
athena_avatar/rendering/: __init__.py  neural_radiance_agent.py  post_processing.py  renderer_3d.py
athena_avatar/ui/: __init__.py  main_window.py  performance_panel.py
athena_avatar/utils/: __init__.py  config_manager.py  logger.py
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build_linux/examples/: Makefile  cmake_install.cmake
chatgpt-plus-clone/: PROJECT_SUMMARY.md  README.md  build.bat  build.py  config_manager.py  device_utils.py  error_handler.py  install.ps1  main.py  overlay_ar.py  performance_tuner.py  plugin_loader.py  plugin_loader_no_sandbox.py  plugin_sandbox.py  plugin_test_dialog.py  requirements-core.txt  requirements-dev.txt  requirements-image.txt  requirements-plugins.txt  requirements-voice.txt  requirements.txt  settings_dialog.py  test_voice_hotkey.py  voice_async.py  voice_hotkey.py
chatgpt-plus-clone/docs/: DEV_GUIDE.md  USER_GUIDE.md
chatgpt-plus-clone/gpu/: device_manager.py
chatgpt-plus-clone/llm/: agent_orchestrator.py
chatgpt-plus-clone/memory/: memory_manager.py
chatgpt-plus-clone/ml_expertise/: advanced_ml_frameworks.py
chatgpt-plus-clone/plugins/: example_plugin.py  sample_plugin.py
chatgpt-plus-clone/scripts/: run_tests.ps1
chatgpt-plus-clone/security/: harden_permissions.ps1  restricted_exec.py
chatgpt-plus-clone/tests/: test_llm_voice.py  test_plugin_loader.py  test_plugin_reload.py
chatgpt-plus-clone/tools/: code_executor_no_sandbox.py  voice_agent.py
chatgpt-plus-clone/ui/: __init__.py  chat_interface.py  error_handler.py  onboarding.py  plugin_test_dialog.py  settings_dialog.py  tools_panel.py
chatgpt-plus-clone/voice/: async_voice_input.py
ci/: github-actions.yml
docs/: AI_ACCELERATION_GUIDE.md
examples/: CMakeLists.txt  ai_acceleration_demo.cpp  image_processing_demo.c
gpu/: device_manager.py  gpu_profiler.py
include/ai/: AIAccelerator.h  AIProcessor.h
include/audio/: AudioEngine.h
include/core/: Application.h  HyperPerformanceEngine.h  OmnipotenceEngine.h  PerformanceManager.h  QuantumConsciousnessEngine.h  ThreadPool.h  ultimate_config.h  ultimate_core.h  ultimate_errors.h  ultimate_memory.h  ultimate_system.h  ultimate_types.h
include/graphics/: RenderEngine.h  (+2 more)
installer/: README.md
orchestration/: ai_task_manager.py
plugins/: example_plugin.py  sdk.py
profiling/: dashboard.py
remote_control/: server.py
scripts/: build_installer.py  setup_vs_environment.ps1  test_runner.py
sdk/: base_plugin.py
src/: UltimateApplication.cpp  UltimateGodModeApplication.cpp  main.cpp  main_minimal.cpp  main_simple.cpp
tests/: test_ai_manager.py  test_ai_task_manager.py  test_plugin_loader.py  test_plugin_sdk.py  test_voice_agent.py
voice/: async_voice_input.py  tts_agent.py  voice_agent.py  voice_agent_whisper.py
(+35 files in other folders)
